completed auth phase
