# cmd/api/auth.go
@@ -1,10 +1,13 @@
 package main
 
 import (
+	"crypto/sha256"
+	"encoding/hex"
 	"net/http"
 
 	"github.com/duixe/social_app/internal/models"
 	"github.com/duixe/social_app/internal/repository"
+	"github.com/google/uuid"
 )
 
 type RegisterUserPayload struct {
@@ -13,6 +16,11 @@ type RegisterUserPayload struct {
 	Username  string `json:"username" validate:"required,max=100"`
 	Email     string `json:"email" validate:"required,email,max=255"`
 	Password  string `json:"password" validate:"required,min=4,max=8"`
+}
+
+type UserWithToken struct {
+	*models.User
+	Token string `json:"token"`
 }
 
 // registerUserHandler godoc
@@ -29,7 +37,7 @@ type RegisterUserPayload struct {
 //	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
-	if err := readJSON(w, r, payload); err != nil {
+	if err := readJSON(w, r, &payload); err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
@@ -41,8 +49,9 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	user := &models.User{
 		FirstName: payload.FirstName,
-		LastName: payload.LastName,
-		Username: payload.Username,
+		LastName:  payload.LastName,
+		Username:  payload.Username,
+		Email: payload.Email,
 	}
 
 	if err := user.Password.Set(payload.Password); err != nil {
@@ -52,7 +61,13 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	ctx := r.Context()
 
-	err := app.repository.Users.CreateAndInvite(ctx, user, "tko-1234", app.config.mail.exp)
+	plainToken := uuid.New().String()
+
+	//hash plaintoken and store that in DB
+	hash := sha256.Sum256([]byte(plainToken))
+	hashToken := hex.EncodeToString(hash[:])
+
+	err := app.repository.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp)
 	if err != nil {
 		switch err {
 		case repository.ErrDuplicateEmail:
@@ -65,7 +80,12 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := app.jsonResponse(w, http.StatusCreated, nil); err != nil {
+	userWithToken := &UserWithToken{
+		User: user,
+		Token: plainToken,
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
