# internal/models/user.go
@@ -3,29 +3,30 @@ package models
 import "golang.org/x/crypto/bcrypt"
 
 type User struct {
-	ID int64 `json:"id"`
-	FirstName string `json:"first_name"`
-	LastName string `json:"last_name"`
-	Username string `json:"username"`
-	Email string `json:"email"`
-	Password password `json:"-"`
-	CreatedAt string `json:"created_at"`
+	ID        int64    `json:"id"`
+	FirstName string   `json:"first_name"`
+	LastName  string   `json:"last_name"`
+	Username  string   `json:"username"`
+	Email     string   `json:"email"`
+	Password  Password `json:"-"`
+	IsActive  bool     `json:"is_active"`
+	CreatedAt string   `json:"created_at"`
 }
 
-type password struct {
-	text *string
-	hash []byte
+type Password struct {
+	Text *string
+	Hash []byte
 }
 
-func (pass *password) Set (text string) error {
+func (pass *Password) Set(text string) error {
 	hash, err := bcrypt.GenerateFromPassword([]byte(text), bcrypt.DefaultCost)
 
 	if err != nil {
 		return err
 	}
 
-	pass.text = &text
-	pass.hash = hash
+	pass.Text = &text
+	pass.Hash = hash
 
 	return nil
 }
